# notter

./: .gitignore  LICENSE  Makefile  README.md  install.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: tests.yml
notter/: cli.py
src/notter/: cli.py  constants.py  context.py  controller.py  db_manager.py  decorators.py  exceptions.py  explorer.py  index.py  model.py  note.py  notter.py  repository.py  sql_statements.py  utils.py
src/notter/explorers/: __init__.py  base.py  c.py  go.py  haskell.py  java.py  javascript.py  kotlin.py  lua.py  perl.py  php.py  python.py  r.py  react.py  regex.py  registry.py  ruby.py  rust.py  scala.py  swift.py  vue.py
tests/: conftest.py
tests/notter/: test_cli.py  test_controller.py  test_index.py  test_notter.py  test_repository.py  test_utils.py
