[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notter"
version = "0.1.0"
description = "A simple note taking tool for software projects."
authors = [
    {name = "Taylan Dogan", email = "taylandogan.nl@gmail.com"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["notes", "todos", "tracking", "index"]

# Requirements
dependencies = ["click", "pygments"]

[project.optional-dependencies]
# TODO: Add minimum versions next to dev/test dependencies
dev  = ["black", "flake8", "isort", "mypy"]
test = [ "coverage"]

[scripts]
notter = "notter.cli:cli"

[tool.black]
line-length = 120
target_version = ['py310']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
