[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notter"
version = "0.2.5"
description = "A simple note taking tool for software projects."
authors = [
    {name = "Taylan Dogan", email = "taylandogan.nl@gmail.com"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["notes", "todos", "tracking", "index"]

# Requirements
dependencies = ["click", "pygments", "aiofiles"]

[project.optional-dependencies]
# TODO: Add minimum versions next to dev/test dependencies
dev  = ["ruff", "isort", "mypy", "coverage", "pytest", "pyinstaller", "types-aiofiles"]
test = [ "coverage", "pytest"]

[scripts]
notter = "notter.cli:cli"

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src", "tests"]
fix-only = true

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "W", "C", "UP", "PL", "RUF"]
ignore = []

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
known-first-party = ["notter"]
order-by-type = true
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]
relative_files = true
omit = [
  "reports/*",
	"*/tests/*",
  "src/notter/constants.py",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
