[metadata]
name = notter
version = 0.1.0
author = Taylan Dogan
author_email = taylandogan.nl@gmail.com
license = MIT
summary = A simple note taking tool for software projects.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/taylandogan/notter
home_page = https://github.com/taylandogan/notter
classifier =
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src

[flake8]
exclude=.git,.vscode,
max-line-length=120

[mypy]
disallow_incomplete_defs = true
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
